# mkdocs-llm-context

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
src/mkdocs_llm_context/: __init__.py  plugin.py
tests/: test_plugin.py
tests/fixtures/: mkdocs.yml  mkdocs_exclude.yml  mkdocs_notitle.yml  mkdocs_txt.yml  mkdocs_txt_auto.yml
tests/fixtures/docs/: other.md
tests/fixtures/docs_notitle/: index.md  notitle.md
