[project]
name = "mkdocs-llm-context"
version = "0.1.0"
description = "Bundle your MkDocs site into a single file for LLM or agent context."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mkdocs>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.entry-points."mkdocs.plugins"]
llm-context = "mkdocs_llm_context.plugin:LlmContextPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocs_llm_context"]
