[project]
name = "mkdocs-llm-context"
version = "0.1.0"
description = "Bundle your MkDocs site into a single file for LLM or agent context."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["mkdocs", "llm", "ai", "context", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

[project.urls]
Homepage = "https://github.com/agibson22/mkdocs-llm-context"
Repository = "https://github.com/agibson22/mkdocs-llm-context"
Issues = "https://github.com/agibson22/mkdocs-llm-context/issues"
dependencies = [
    "mkdocs>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[project.entry-points."mkdocs.plugins"]
llm-context = "mkdocs_llm_context.plugin:LlmContextPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocs_llm_context"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
